[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/m5x7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Prefabs/UI/Themes/UITheme.tres" type="Theme" id=2]
[ext_resource path="res://Script/Menus/Pause Screen.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[node name="Pause Screen" type="Popup"]
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="Label" parent="."]
margin_left = 125.0
margin_top = 32.0
margin_right = 213.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 1 )
text = "PAUSE"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause Menu" type="VBoxContainer" parent="."]
margin_left = 134.0
margin_top = 71.0
margin_right = 203.0
margin_bottom = 140.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="Pause Menu"]
margin_right = 69.0
margin_bottom = 18.0
text = "Resume"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="Pause Menu"]
margin_top = 22.0
margin_right = 69.0
margin_bottom = 40.0
disabled = true
text = "Options"
flat = true

[node name="Exit" type="Button" parent="Pause Menu"]
margin_top = 44.0
margin_right = 69.0
margin_bottom = 62.0
text = "Exit"
flat = true
[connection signal="pressed" from="Pause Menu/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Pause Menu/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Pause Menu/Exit" to="." method="_on_Exit_pressed"]
